<resources>
    <string name="app_name">PuzzleGame</string>
    <string name="difficulty">Difficulty:</string>
    <string name="difficulty_format">Difficulty: %1$d * %1$d</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="step_title">Step:</string>
    <string name="time_title">Time:</string>
    <string name="original_pic">Orig Pic</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
</resources>
